--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
+    "karma-rollup-preprocessor": "^5.1.1",
     "mocha": "^5.0.4",
+    "rollup": "^0.65.0",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^9.0.0",
     "rollup-plugin-css-only": "^0.4.0",
     "rollup-plugin-node-resolve": "^3.2.0",
+    "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-vue": "^3.0.0",
-    "vue-template-compiler": "^2.5.13",
-    "karma-rollup-preprocessor": "^5.1.1"
+    "vue": "^2.5.13",
+    "vue-template-compiler": "^2.5.13"
   }
 }
